fix: domain verification
